vendor/thiserror-1.0.24/tests/ui/union.stderr
error: union as errors are not supported
 --> $DIR/union.rs:4:1
  |
4 | / pub union U {
5 | |     msg: &'static str,
6 | |     num: usize,
7 | | }
  | |_^
