vendor/thiserror-1.0.24/tests/ui/union.rs
use thiserror::Error;

#[derive(Error)]
pub union U {
    msg: &'static str,
    num: usize,
}

fn main() {}
